--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Notes</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.2/masonry.pkgd.min.js"></script>
+    <title>Chaos messenger</title>
 </head>
 <body>
     <div id='mount-point'></div>
-
     <script type="text/javascript" src="build/bundle.js"></script>
 </body>
 </html>
